2007-12-19  David Zeuthen  <davidz@redhat.com>

	Add missing files from previous patch.

	* daemon/cdda.mount.in:
	* daemon/gvfsbackendcdda.c: (g_vfs_backend_cdda_finalize),
	(g_vfs_backend_cdda_init), (do_mount), (try_mount), (do_unmount),
	(get_track_num_from_name), (free_read_handle), (create_header),
	(do_open_for_read), (paranoia_callback), (do_read),
	(do_seek_on_read), (do_close_read), (set_info_for_track),
	(do_query_info), (do_enumerate), (g_vfs_backend_cdda_class_init):
	* daemon/gvfsbackendcdda.h:
	* programs/gvfs-less:

2007-12-19  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.[ch]:
        * client/gdaemonvolumemonitor.c:
        * hal/ghalvolumemonitor.c:
        * hal/hal-module.c:
	Remove spew
	Update for new APIs
	Don't use GDaemonVolumeMonitor if not using GDaemonVfs.
	
        * hal/hal-pool.c:
	Close custom dbus connection before unrefing

2007-12-19  David Zeuthen  <davidz@redhat.com>

	Add the cdda:// backend for Compact Disc Digital Audio discs.

	Allow a backend to specify the fuse name directly instead of
	using the display name

	Make GDaemonVolumeMonitor and GDaemonMount use the new
	adopt_orphan_mount() function on GVolumeMonitor in gio. Also,
	since a GMount now can be associated with a GVolume, implement
	eject().

	Add a new gvfs-less program.

	Make gvfs-mount capable of unmounting as well.

	HAL backend changes: attempt to unmount all mounts from
	enclosing volumes and fail the ejection if one of the unmount
	operations fails. Use new adopt_orphan_mount() from gio to
	adopt cdda:// volumes for audio discs. Emit the 'eject-button'
	signal on GDrive. Various other fixes.

	* client/gdaemonfile.c: (g_daemon_file_find_enclosing_mount):
	* client/gdaemonmount.c: (g_daemon_mount_finalize),
	(g_daemon_mount_new), (g_daemon_mount_get_volume),
	(g_daemon_mount_get_drive), (g_daemon_mount_can_eject),
	(foreign_volume_removed), (g_daemon_mount_set_foreign_volume),
	(eject_wrapper_callback), (g_daemon_mount_eject),